# rename-file-by-time-info

./: .gitignore  LICENSE  README.md  config.json  distribute.py  pyproject.toml  rename_files.py
rename_file_by_time_info/external_program/: helper.py
rename_file_by_time_info/general_file/: __init__.py  file_name_formatter.py  helper.py
rename_file_by_time_info/media_file/: __init__.py  helper.py  image_info.py  media_file_info.py  media_file_name_formatter.py  video_and_audio_info.py
tests/general_file/file_name_formatter/: test_.py
