[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rename-file-by-time-info"
dynamic = ["version"]
readme = "README.md"

classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["Pillow==10.2.*"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black"]
dist = ["build", "pyinstaller==6.*"]
test = ["pytest==8.*"]

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["rename_file_by_time_info"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "rename_file_by_time_info/_version.py"
